--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
                 <input type="text" placeholder="username" />
                 <input type="password" placeholder="password" />
                 <button>login</button>
-                <p class="message">Not registered? <a href="{% url 'cadastrar_usuario' %}">Create an account</a></p>
+                <p class="message">Não possuí conta? <a href="{% url 'cadastrar_usuario' %}">Crie uma conta</a></p>
             </form>
         </div>
     </div>
