--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
+    
     <h1>Somente configuração de template. Keep going.</h1>
+
+    {% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+    {% else %}
+    <p>Welcome, new user. Please log in.</p>
+    {% endif %}
+
 </body>
 
 </html>
